--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <meta name="twitter:title" content="Free ChatGPT" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Free ChatGPT</title>
+    <title>AI 李根</title>
   </head>
   <body>
     <div id="root"></div>
