--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <meta
       name="description"
-      content="0xFAQ "
+      content="Q&A3 "
     />
     <meta
       name="twitter:description"
-      content="0xFAQ"
+      content="Q&A3"
     />
-    <meta name="twitter:title" content="0xFAQ" />
+    <meta name="twitter:title" content="Q&A3" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>0xFAQ</title>
+    <title>Q&A3</title>
   </head>
   <body>
     <div id="root"></div>
