--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
       name="twitter:description"
       content="Q&A3 is an AI-powered web3 data platform that helps you get answers to every web3 questions."
     />
-    <meta name="twitter:title" content="Q&A3" />
+    <meta name="twitter:title" content="Q&A3 | A next-generation data AI platform for crypto industry" />
+    <meta property="og:description" content="Q&A3 is an AI-powered web3 data platform that helps you get answers to every web3 questions." />
+    <meta name="twitter:image" content="https://0xfaqstorage.blob.core.windows.net/web-static/6191686668163_.pic.jpg">
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@qnaweb3" />
     <title>Q&A3</title>
   </head>
   <body>
