--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:image" content="https://0xfaqstorage.blob.core.windows.net/web-static/6191686668163_.pic.jpg">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@qnaweb3" />
-    <title>Q&A3</title>
+    <title>Q&A3 | A next-generation data AI platform for crypto industry</title>
   </head>
   <body>
     <div id="root"></div>
