--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <meta property="og:image" content="https://bettergpt.chat/social.png" />
-    <meta name="twitter:image" content="https://bettergpt.chat/social.png" />
-    <meta
-      name="description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
-    />
-    <meta
-      name="twitter:description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
-    />
-    <meta name="twitter:title" content="Better ChatGPT" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <title>Better ChatGPT</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <div id="modal-root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  <meta property="og:image" content="https://bettergpt.chat/social.png" />
+  <meta name="twitter:image" content="https://bettergpt.chat/social.png" />
+  <meta name="description"
+    content="Play and chat smarter with BetterGPT - an amazing open-source web app with a better UI and more AI models! " />
+  <meta name="twitter:description"
+    content="Play and chat smarter with BetterGPT - an amazing open-source web app with a better UI and more AI models! " />
+  <script async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6419315065395381'
+    crossOrigin='anonymous'></script>
+  <meta name="twitter:title" content="Better ChatGPT" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta http-equiv="Content-Security-Policy"
+    content="script-src 'self' 'unsafe-eval' vitals.vercel-insights.com https://pagead2.googlesyndication.com https://va.vercel-scripts.com">
+
+  <title>Better ChatGPT</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <div id="modal-root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
