Changed ad provider and added TinderGPT prompt.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     content="Play and chat smarter with BetterGPT - an amazing open-source web app with a better UI and more AI models! " />
   <meta name="twitter:description"
     content="Play and chat smarter with BetterGPT - an amazing open-source web app with a better UI and more AI models! " />
-  <script async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6419315065395381'
-    crossOrigin='anonymous'></script>
+  <meta name="monetag" content="15a3bb6256123db463aed9a5b6d4a4a7">
   <meta name="twitter:title" content="Better ChatGPT" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta http-equiv="Content-Security-Policy"
