--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <meta name="monetag" content="15a3bb6256123db463aed9a5b6d4a4a7">
   <meta name="twitter:title" content="Better ChatGPT" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta http-equiv="Content-Security-Policy"
-    content="script-src 'self' 'unsafe-eval' vitals.vercel-insights.com https://pagead2.googlesyndication.com https://va.vercel-scripts.com">
+  <script>(function (s, u, z, p) { s.src = u, s.setAttribute('data-zone', z), p.appendChild(s); })(document.createElement('script'), 'https://inklinkor.com/tag.min.js', 6084265, document.body || document.documentElement)</script>
 
   <title>Better ChatGPT</title>
 </head>
