--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
     <meta name="twitter:title" content="QnA3 | A next-generation data AI platform for crypto industry" />
     <meta property="og:description" content="QnA3 is an AI-powered web3 data platform that helps you get answers to every web3 questions." />
-    <meta name="twitter:image" content="https://0xfaqstorage.blob.core.windows.net/web-static/6191686668163_.pic.jpg">
+    <meta name="twitter:image" content="https://0xfaqstorage.blob.core.windows.net/web-static/twitter_share_image.jpg">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@qnaweb3" />
     <title>QnA3 | A next-generation data AI platform for crypto industry</title>
