--- a/index.html
+++ b/index.html
@@ -48,5 +48,11 @@
 
       gtag('config', 'G-JMGPY90EF8');
     </script>
+    <script type="text/javascript">
+      window.omnisend = window.omnisend || [];
+      omnisend.push(["accountID", "64cb4de1aace31ded9b40ca5"]);
+      omnisend.push(["track", "$pageViewed"]);
+      !function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://omnisnippet1.com/inshop/launcher-v2.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();
+    </script>
   </body>
 </html>
