--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@qnaweb3" />
     <title>QnA3 | A next-generation data AI platform for crypto industry</title>
+    <!-- Twitter conversion tracking base code -->
+    <script>
+      !function(e,t,n,s,u,a){e.twq||(s=e.twq=function(){s.exe?s.exe.apply(s,arguments):s.queue.push(arguments);
+      },s.version='1.1',s.queue=[],u=t.createElement(n),u.async=!0,u.src='https://static.ads-twitter.com/uwt.js',
+      a=t.getElementsByTagName(n)[0],a.parentNode.insertBefore(u,a))}(window,document,'script');
+      twq('config','ofs73');
+      </script>
+      <!-- End Twitter conversion tracking base code -->
   </head>
   <body>
     <div id="root"></div>
