--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta property="og:image" content="https://gpt.slyinc.ch/social.png" />
     <meta name="twitter:image" content="https://gpt.slyinc.ch/social.png" />
     <meta
