--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Slyinc-GPT">
+    <meta name="apple-mobile-web-app-title" content="GPT4Slyinc">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -14,15 +14,15 @@
     <meta name="twitter:image" content="https://gpt.slyinc.ch/social.png" />
     <meta
       name="description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="Play and chat smarter with GPT4Slyinc - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
     />
     <meta
       name="twitter:description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="Play and chat smarter with GPT4Slyinc - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
     />
-    <meta name="twitter:title" content="Better ChatGPT" />
+    <meta name="twitter:title" content="GPT4Slyinc" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Better ChatGPT</title>
+    <title>GPT4Slyinc</title>
   </head>
   <body>
     <div id="root"></div>
