Remove unused files and update localization

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       name="twitter:description"
       content="Play and chat smarter with GPT-CX - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
     />
-    <meta name="twitter:title" content="Better ChatGPT" />
+    <meta name="twitter:title" content="GPT-CX" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Better ChatGPT</title>
+    <title>GPT-CX</title>
   </head>
   <body>
     <div id="root"></div>
