--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <meta name="twitter:image" content="https://bettergpt.chat/social.png" />
     <meta
       name="description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="A Custom ChatGPT UI for a better learning and documenting experience "
     />
     <meta
       name="twitter:description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
+      content="A Custom ChatGPT UI for a better learning and documenting experience "
     />
-    <meta name="twitter:title" content="Better ChatGPT" />
+    <meta name="twitter:title" content="AiNotes" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Better ChatGPT</title>
+    <title>AiNotes</title>
   </head>
   <body>
     <div id="root"></div>
