--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       name="twitter:description"
       content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
     />
-    <meta name="twitter:title" content="Better ChatGPT" />
+    <meta name="twitter:title" content="T1A ChatGPT" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>Better ChatGPT</title>
+    <title>T1A ChatGPT</title>
   </head>
   <body>
     <div id="root"></div>
