Remove company name to GitHub repository vars

--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <meta property="og:image" content="https://bettergpt.chat/social.png" />
-    <meta name="twitter:image" content="https://bettergpt.chat/social.png" />
-    <meta
-      name="description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
-    />
-    <meta
-      name="twitter:description"
-      content="Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API! "
-    />
-    <meta name="twitter:title" content="T1A ChatGPT" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <title>T1A ChatGPT</title>
+    <title>Custom ChatGPT</title>
   </head>
   <body>
     <div id="root"></div>
